# ResumeUnmark

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  universal_watermark_remover.py
docs/: README.md  app.js  index.html  style.css
scripts/: build.py
src/: __init__.py
src/cli/: main.py
src/core/: __init__.py  cleaner.py  config.py  detector.py
src/utils/: __init__.py  file_utils.py
tests/: test_cleaner.py  test_detector.py  test_utils.py
tests/fixtures/: .gitkeep
